// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge > renders with as correctly 1`] = `
"<div data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Badge</span>
  <!--v-if-->
</div>"
`;

exports[`badge > renders with avatar and leadingIcon correctly 1`] = `"<span data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><!--v-if--><!--v-if--></span>"`;

exports[`badge > renders with avatar and trailingIcon correctly 1`] = `
"<span data-slot="base" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
<!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>"
`;

exports[`badge > renders with avatar correctly 1`] = `
"<span data-slot="base" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`badge > renders with class correctly 1`] = `
"<span data-slot="base" class="rounded-full font-bold"><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with default slot correctly 1`] = `"<span data-slot="base" class=""><!--v-if-->Default slot<!--v-if--></span>"`;

exports[`badge > renders with icon correctly 1`] = `"<span data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><!--v-if--><!--v-if--></span>"`;

exports[`badge > renders with label correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with leading and icon correctly 1`] = `"<span data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><!--v-if--><!--v-if--></span>"`;

exports[`badge > renders with leading slot correctly 1`] = `"<span data-slot="base" class="">Leading slot<!--v-if--><!--v-if--></span>"`;

exports[`badge > renders with leadingIcon correctly 1`] = `"<span data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg><!--v-if--><!--v-if--></span>"`;

exports[`badge > renders with neutral variant outline correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with neutral variant soft correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with neutral variant solid correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with neutral variant subtle correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with primary variant outline correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with primary variant soft correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with primary variant solid correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with primary variant subtle correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size lg correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size md correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size sm correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size xl correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size xs correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with square correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with trailing and icon correctly 1`] = `"<span data-slot="base" class=""><!--v-if--><!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>"`;

exports[`badge > renders with trailing slot correctly 1`] = `"<span data-slot="base" class=""><!--v-if--><!--v-if-->Trailing slot</span>"`;

exports[`badge > renders with trailingIcon correctly 1`] = `"<span data-slot="base" class=""><!--v-if--><!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>"`;

exports[`badge > renders with ui correctly 1`] = `
"<span data-slot="base" class=""><!--v-if--><span data-slot="label" class="font-bold">Badge</span>
<!--v-if--></span>"
`;
